<resources>
    <string name="app_name">Scores</string>
    <string name="logo">El logo de Scores</string>
    <string name="login">Iniciar sesión</string>
    <string name="login_f">Iniciar sesión con Facebook</string>
    <string name="olvida_pass">¿Olvidaste la contraseña?</string>
    <string name="registro">Registrarse</string>
    <string name="registrate">Si no eres usuario, ¡Registrate ya!</string>
    <string name="slogan">Las partituras del futuro</string>
    <string name="facebook_app_id">1439111256308763</string>
    	<string name="mail">Correo electrónico</string>
    	<string name="pass">Contraseña</string>
    	<string name="login_title">Iniciar sesión</string>
    	<string name="err_campos_vacios">Debes rellenar todos los campos</string>
    	<string name="err_login_unknown_user">Nombre de usuario y/o contraseña erróneos</string>
    	<string name="err_not_active">Esta cuenta está pendiente de activación</string>
    	<string name="err_login_unknown">Hubo un error. Por favor, inténtalo de nuevo</string>
    	<string name="cancel">Cancelar</string>
    	<string name="confirm_login">Iniciar</string>
    	<string name="cerrar_sesion">Cerrar Sesión</string>
    	<string name="close_d">Cerrar</string>
    	<string name="olvido_title">Recuperar contraseña</string>
    	<string name="mail_olvido_pass">Introducir correo electrónico</string>
    	<string name="confirm_olvidopass">Enviar</string>
    	<string name="err_olvidopass_unknown">Hubo un error y no se pudo recuperar la contraseña.
    	    Por favor, inténtalo de nuevo más tarde</string>
    	<string name="olvidopass_ok">Te hemos enviado un correo electrónico con instrucciones sobre su contraseña</string>
    	<string name="err_olvidopass_mail">No hemos encontrado ninguna cuenta asociada a este correo</string>
    	<string name="err_olvidopass_mail_not_sent">Se cambió tu contraseña pero no pudimos enviártela. 
    	    Por favor, inténtalo de nuevo más tarde</string>
    	<string name="registro_title">Registrarse</string>
    	<string name="nombre_registro">Nombre</string>
    	<string name="mail_registro">Correo electrónico</string>
    	<string name="pass_registro">Contraseña</string>
    	<string name="confipass_registro">Confirmar contraseña</string>
    	<string name="confirm_registro">Registrarse</string>
    	<string name="err_net">Hubo un error en la red y no fue posible enviar los datos. Por favor, inténtalo de nuevo más tarde.</string>
    	<string name="err_pass">Las contraseñas no coinciden</string>
    	<string name="err_reg">Hubo un error al intentar efectuar el registro. 
    	    Por favor, inténtalo de nuevo más tarde.</string>
    	<string name="err_reg_mail">Este email ya se encuentra en uso, por favor elige otro</string>
    	<string name="ok_reg">Se ha enviado un correo electrónico</string>
    	<string name="ok_reg_mail">Se completó el registro pero no se pudo enviar el email de 
    	    confirmación. Te lo enviaremos manualmente en un plazo máximo de 24 horas.</string>
    <string name="titulo_coleccion">Mi colección</string>
    <string name="bin">Delete</string>
    <string name="action_sort">Ordenar</string>
    <string name="author">Autor</string>
    <string name="author_dialog_title">Elige un autor</string>
    <string name="instrument">Instrumento</string>
    <string name="instrument_dialog_title">Elige un instrumento</string>
    <string name="name">Ordenar por nombre</string>
    <string name="show_all">Mostrar todas</string>
    <string name="action_search">Buscar</string>
    <string name="no_scores">Tu colección de partituras está vacía. 
        Puedes comprar partituras en nuestra tienda.</string>
    <string name="no_scores_button">Ir a la tienda</string>
    	<string name="select_all">Seleccionar todos</string>
    	<string name="select_none">Deseleccionar todos</string>
    	<string name="title">Selecciona partituras</string>
    	<string name="subtitle">1 partitura seleccionada</string>
    	<string name="subtitle2">partituras seleccionadas</string>
    	<string name="successDelete">Archivos eliminados con éxito</string>
    	<string name="failDelete">Sucedió un error y no se pudieron eliminar 
    	    los archivos seleccionados</string>
    <string name="metronome">Metrónomo</string>
    	<string name="metronome_pause">Pausa</string>
    	<string name="metronome_stop">Para</string>
    	<string name="metronome_play">Inicia</string>
    	<string name="metronome_back">Volver al inicio</string>
    	<string name="close_metronome">Cerrar metrónomo</string>
    	<string name="tempo">Tempo</string>
    <string name="pa">Partitura</string>
    <string name="contentDescription">Imagen</string>
    <string name="mis_datos">Mis datos</string>
    	<string name="mis_datos_nombre">Nombre:</string>
    	<string name="mis_datos_email">Email:</string>
    	<string name="mis_datos_clave">Cambiar contraseña</string>
    	<string name="mis_datos_clave_vieja">Contraseña antigua</string>
    	<string name="mis_datos_clave_nueva">Contraseña nueva</string>
    	<string name="mis_datos_clave_repetir">Repetir contraseña nueva</string>
    	<string name="mis_datos_boton">Cambiar contraseña</string>
    	<string name="mis_datos_clave_cambiada">Se ha cambiado tu contraseña</string>
    	<string name="mis_datos_error_verif">No hemos podido verificar su identidad</string>
    	<string name="mis_datos_clave_erronea">Contraseña incorrecta</string>
    <string name="feedback">Feedback</string>
    	<string name="feedback_envianos">
    		Envíanos aquellos errores que hayas encontrado o sugerencias que tengas
    		para mejorar la aplicación. Muchas gracias.
    	</string>
    	<string name="feedback_boton">Enviar feedback</string>
    	<string name="feedback_enviado">Feedback enviado. Gracias por ayudarnos a mejorar.</string>
    <string name="terminos_condiciones">Términos y condiciones</string>
    	<string name="terminos">
    	    CONDICIONES DE USO DE LA APLICACIÓN\n\n

			1. ACEPTACIÓN DE CONDICIONES DE USO\n\n
			
			Al instalar la APLICACIÓN, el usuario acepta las presentes condiciones de uso.\n\n
			
			2. DEFINICIÓN\n\n
			
			2.1. La APLICACIÓN ofrece al usuario el acceso a una tienda online (en adelante, la 
			TIENDA) desde la cual el usuario podrá adquirir al precio dictado en la misma las 
			partituras existentes en el catálogo ofrecido por RISING. El usuario podrá descargar 
			en su dispositivo las partituras que haya adquirido y las podrá utilizar de dos formas posibles: 
			moviéndolas manualmente o seleccionando una velocidad de metrónomo a partir de la 
			cual la partitura se moverá automáticamente durante toda la pieza.\n\n
			
			2.2. La APLICACIÓN se distribuye de forma gratuita. Además, RISING publicará 
			actualizaciones periódicas de la APLICACIÓN que tampoco devengarán coste alguno por 
			parte del usuario.\n\n
			
			3. PROTECCIÓN DE DATOS\n\n
			
			Cualquier información personal que se facilite a RISING durante el uso de la 
			APLICACIÓN se utilizará únicamente en conformidad con la política de privacidad 
			de RISING.\n\n
			
			4. LICENCIA Y DERECHOS DE PROPIEDAD\n\n
			
			4.1. Todas las marcas, derechos de autor, bases de datos y otros derechos de 
			propiedad intelectual de la APLICACIÓN, cualquiera que sea su naturaleza, así 
			como el código fuente, son propiedad de RISING.\n\n
			
			4.2. Por el presente, RISING ofrece una licencia revocable, gratuita, no exclusiva 
			y de carácter internacional para utilizar esta APLICACIÓN en el ámbito personal o 
			profesional dentro de los límites establecidos por estas condiciones de la APLICACIÓN.\n\n
			
			5. CONDICIONES DE USO\n\n
			
			5.1. El usuario no actuará ni permitirá que terceras personas actúen en su nombre para:\n\n
			
			a) Hacer y distribuir copias de la APLICACIÓN.\n\n
			b) Intentar copiar, reproducir, alterar, modificar, hacer ingeniería inversa, desarmar, 
			descompilar, transferir, intercambiar o traducir la APLICACIÓN.\n\n
			c) Crear ninguna clase de proyecto derivado de la APLICACIÓN.\n\n
			
			5.2. La APLICACIÓN se entrega al usuario de manera gratuita para su uso personal y no 
			comercial. RISING se reserva el derecho a modificar o deshabilitar la APLICACIÓN en 
			cualquier momento y por cualquier motivo.\n\n
			
			5.3. El usuario acepta que los términos del acuerdo con el proveedor de su red móvil 
			(«Proveedor de Servicios Móviles») continuarán en vigor durante el uso de la APLICACIÓN. 
			En consecuencia, es posible que el Proveedor de Servicios Móviles cobre por los servicios 
			de conexión a la red mientras la APLICACIÓN permanezca conectada a la red, o que se 
			produzcan cargos económicos de terceros. El usuario acepta la responsabilidad de los 
			cargos que pudieran surgir.\n\n
			
			5.4. Si el usuario no es el titular de facturación del teléfono o dispositivo móvil 
			utilizado para acceder a la APLICACIÓN, se asumirá que tiene permiso del titular para 
			utilizar la APLICACIÓN.\n\n
			
			6. DISPONIBILIDAD\n\n
			
			6.1. La APLICACIÓN está disponible para los dispositivos móviles portátiles que funcionen 
			con los sistemas operativos Android OS. RISING hará todos los esfuerzos razonables para 
			que la APLICACIÓN esté disponible en todo momento. No obstante, el usuario acepta que la 
			entrega de la APLICACIÓN se realizará a través de internet y de las redes móviles y que, 
			en consecuencia, la calidad y disponibilidad de la APLICACIÓN pueden verse afectadas por 
			factores ajenos al control responsable de RISING.\n\n
			
			6.2. Para poder utilizar la APLICACIÓN, el usuario debe tener un dispositivo móvil compatible, 
			con conexión a internet y que cumpla las especificaciones mínimas («Requisitos del software»).\n\n
			
			6.3. Los requisitos del software son los siguientes: Dispositivos Android OS de más de 7 pulgadas y con los
			sistemas operativos Android OS 4.1 a OS 4.4. Idiomas: español e inglés.\n\n
			
			7. ELIMINACIÓN DE LA CUENTA\n\n
			
			3.2.7.1. El usuario está facultado para dar de baja su cuenta en cualquier momento a través de 
			la herramienta que se ofrece en la APLICACIÓN para tal fin, y sin necesidad de notificación 
			previa a RISING.\n\n

			3.2.7.2. La eliminación de la cuenta por parte del usuario es un proceso irreversible que tiene 
			como consecuencia la eliminación de toda la información relativa al usuario contenida en la base 
			de datos de RISING. Esta información incluye el registro de las compras efectuadas por el usuario 
			en la TIENDA. No obstante, las partituras que el usuario tenga descargadas en su dispositivo por 
			haber sido adquiridas a través de la TIENDA no serán eliminadas del dispositivo, aunque el usuario 
			deberá crearse una nueva cuenta si quiere utilizarlas.\n\n

			3.2.7.3. La eliminación de la cuenta por parte del usuario supone la pérdida del saldo que tuviera 
			acumulado en su cuenta, así como el fin de su relación contractual con RISING.\n\n
			
			8. FINALIZACIÓN\n\n
			
			8.1. RISING puede finalizar el uso de la APLICACIÓN en cualquier momento previa notificación, 
			que será publicada en su BLOG.\n\n
		    
			8.2. Al finalizar dicho uso, también se pondrá fin a todos los derechos y licencias 
			otorgados al usuario, lo que significa que el usuario deberá dejar de utilizar el software.\n\n
    	    
    	</string>
    <string name="condiciones_compra">Condiciones de compra</string>
    <string name="eliminar_cuenta">Eliminar cuenta</string>
    <string name="about">Acerca de Scores</string>
	    <string name="version">Versión: Beta 0.1 </string>
	    <string name="acerca_de">Scores ha sido desarrollado por RISING S.C.P.</string>
	    <string name="visitanos">Visita nuestra web: </string>
    	<string name="store">Tienda</string>
</resources>